--- a/.github/workflows/test-code.yml
+++ b/.github/workflows/test-code.yml
@@ -6,3 +6,13 @@ jobs:
         steps:
             - name: Get Code
               uses: actions/checkout@v4.1.1 # Uses betyder att vi kör en action, och inte en command. Checkout action laddar ner koden till maskinen som kör worflowet
+            - name: Setup .NET Core SDK
+              uses: actions/setup-dotnet@v4.0.0
+              with:
+                dotnet-version: '8'
+            - name: Install dependencies
+              run: dotnet restore
+            - name: Build app
+              run: dotnet build --no-restore
+            - name: Test app
+              run: dotnet test --no-restore --verbosity normal
